--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "swiper": "^11.1.14",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
