--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "swiper": "^11.1.14",
-    "use-local-storage": "^3.0.0"
+    "use-local-storage": "^3.0.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
